# Doc-I-Scanner-With-C-

./: CMakeLists.txt  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
cpp/: docscanner.cpp
